# php-switcher

./: Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md
src/: config.rs  detector.rs  hints.rs  lib.rs  main.rs  switcher.rs  tools.rs  version.rs
src/platform/: linux.rs  macos.rs  mod.rs
